# SC2DatasetPreparator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.MD
.github/workflows/: ci.yml  cla.yml
docker/: Dockerfile  Dockerfile.dev  docker-test-compose.yml
docs/: gen_ref_pages.py
docs/css/: code_select.css
processing/json_merger/: map_translation.json  new_maps_processed.json
signatures/version1/: cla.json
src/: directory_flattener.py  file_packager.py  file_renamer.py  json_merger.py  processed_mapping_copier.py  sc2_map_downloader.py  sc2_replaypack_processor.py  version_sorter.py
src/datasetpreparator/: __init__.py  settings.py
src/datasetpreparator/dir_packager/: __init__.py  dir_packager.py
src/datasetpreparator/directory_flattener/: Dockerfile  README.md  directory_flattener.py
src/datasetpreparator/file_renamer/: README.md  __init__.py  file_renamer.py
src/datasetpreparator/json_merger/: Dockerfile  json_merger.py
src/datasetpreparator/processed_mapping_copier/: README.md  processed_mapping_copier.py
src/datasetpreparator/sc2/sc2_map_downloader/: Dockerfile  README.md  sc2_map_downloader.py
src/datasetpreparator/sc2/sc2_replaypack_processor/: Dockerfile  README.md  __init__.py  sc2_replaypack_processor.py
src/datasetpreparator/sc2/sc2_replaypack_processor/utils/: multiprocess.py  replaypack_processor_args.py
src/datasetpreparator/sc2/sc2egset_replaypack_processor/: Dockerfile  sc2egset_replaypack_processor.py
src/datasetpreparator/sc2/sc2egset_replaypack_processor/utils/: multiprocess.py  replaypack_processor_args.py
src/datasetpreparator/sc2/sc2reset_replaypack_downloader/: Dockerfile  README.md  available_replaypacks.py  download_file.py  download_replaypack.py  get_md5.py  sc2reset_replaypack_downloader.py  unpack_chunk.py  unpack_zipfile.py
src/datasetpreparator/sc2/sc2reset_replaypack_downloader/utils/: download_replaypack.py  unpack_zipfile.py
src/directory_flattener/: Cargo.toml  Dockerfile  README.md  __init__.py  directory_flattener.py
src/directory_flattener/src/: directory_flattener.rs  main.rs  replaypack_walker.rs  utils.rs
src/file_packager/: Dockerfile  README.md  __init__.py  file_packager.py
src/file_renamer/: Dockerfile  README.md  __init__.py  file_renamer.py
src/json_merger/: Dockerfile  README.md  __init__.py  json_merger.py
src/processed_mapping_copier/: Dockerfile  README.md  __init__.py  processed_mapping_copier.py
src/sc2_map_downloader/: Dockerfile  README.md  __init__.py  sc2_map_downloader.py
src/sc2_replaypack_processor/: Dockerfile  README.md  __init__.py  sc2_replaypack_processor.py
src/sc2datasetpreparator/: __init__.py
src/sc2datasetpreparator/dir_packager/: dir_packager.py
src/sc2datasetpreparator/directory_flattener/: __init__.py  directory_flattener.py
src/sc2datasetpreparator/file_packager/: __init__.py  file_packager.py
src/sc2datasetpreparator/file_renamer/: file_renamer.py
src/sc2datasetpreparator/json_merger/: __init__.py  json_merger.py
src/sc2datasetpreparator/processed_mapping_copier/: Dockerfile  README.md  __init__.py  processed_mapping_copier.py
src/sc2datasetpreparator/sc2/sc2_map_downloader/: __init__.py
src/sc2datasetpreparator/sc2/sc2reset_replaypack_downloader/: sc2reset_replaypack_downloader.py
src/sc2datasetpreparator/sc2_map_downloader/: README.md  sc2_map_downloader.py
src/sc2datasetpreparator/sc2_replaypack_processor/: sc2_replaypack_processor.py
test/: test_main.py  test_utils.py
test/test_cases/: dir_packager_test.py  directory_flattener_test.py  file_packager_test.py  file_renamer_test.py  json_merger_test.py  processed_mapping_copier_test.py  sc2_map_downloader_test.py  sc2_replaypack_processor_test.py  sc2reset_replaypack_downloader_test.py
tests/: conftest.py  test_main.py  test_settings.py  test_utils.py
tests/test_cases/: dir_packager_test.py  directory_flattener_test.py  file_renamer_test.py  json_merger_test.py  processed_mapping_copier_test.py  sc2_map_downloader_test.py  sc2_replaypack_processor_test.py  sc2egset_replaypack_processor_test.py  sc2reset_replaypack_downloader_test.py  test_dir_packager.py  test_directory_flattener.py
