[tool.poetry]
name = "datasetpreparator"
version = "1.2.0"
description = "Tools for dataset processing."
authors = ["Andrzej 'Kaszanas' Białecki"]
license = "MIT License"
readme = "README.md"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.0"
tag_format = "$version"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
sc2reader = { version = "^1.8.0", optional = true }
tqdm = { version = "^4.66.1", optional = true }
requests = { version = "^2.31.0", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.7"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"
mkdocs-material = "^9.5.2"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material-extensions = "^1.3.1"
mkdocs-autorefs = "^0.5.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
commitizen = "^3.13.0"

[tool.poetry.extras]
all = ["requests", "tqdm", "sc2reader"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
