[package]
name = "directory_flattener"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8.2", features = ["v4"]}
walkdir = "2.3.2"
clap = { version = "3.1.1", features = ["derive"] }