[package]
name = "directory_flattener"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0.79"
uuid = {version = "0.8.2", features = ["v4"]}
walkdir = "2.3.2"
clap = { version = "3.1.1", features = ["derive"] }